# pybalancebook

./: .gitignore  LICENSE.md  README.md  pyproject.toml
i18n/: fr.json
src/balancebook/: __main__.py  account.py  amount.py  balance.py  budget.py  csv.py  error.py  errors.py  i18n.py  journal.py  transaction.py  utils.py  yaml.py
src/balancebook/journal/: autoimport.py  cli.py  config.py  journal.py
src/christophe/: account.py  amount.py  balance.py  csv.py  i18n.py  journal.py  terminal.py  transaction.py  utils.py
tests/: test_account.py  test_balance.py  test_cli.py  test_csv.py  test_i18n.py  test_journal.py  test_transaction.py  utils.py
tests/csv/: wrongamount.csv  wrongdate.csv  wrongint.csv  wrongrequired.csv
tests/expected/: new transactions.csv
tests/expected/export/: soldes.csv  transactions.csv
tests/expected/i18n/fr/: comptes.csv  descriptions non appariées.csv  nouvelles transactions.csv  transactions.csv
tests/expected/import/: new transactions.csv  unmatched descriptions.csv  unmatched payees.csv
tests/expected/reformat/: accounts.csv  balances.csv  transactions.csv
tests/export/: classification.csv  comptes.csv  soldes.csv  transactions.csv  txns.csv
tests/i18n/fr/: balancebook.fr.yaml
tests/i18n/fr/données/: comptes.csv  soldes.csv  transactions.csv
tests/i18n/fr/importation/: classification.csv
tests/i18n/fr/importation/compte courant/: importation.yaml
tests/journal/: balancebook.en.yaml  balancebook.yaml  rules.csv  transaction.csv
tests/journal/bank data/: chequing.csv
tests/journal/data/: accounts.csv  balances.csv  budget txn rules.csv  classification rules.csv  transactions.csv
tests/journal/export/: txns.csv
tests/journal/import/: classification rules.csv  unmatched descriptions.csv
tests/journal/import/chequing/: chequing.csv  import.yaml
tests/journal_en/: rules.csv  transaction.csv
tests/journal_en/export/: bals.csv  txns.csv
