[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyBalanceBook"
version = "0.0.4"
authors = [
  { name="Vincent Archambault-B", email="vincentarchambault@icloud.com" },
]
description = "Plain text accounting library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/archambaultv/pybalancebook"
"Bug Tracker" = "https://github.com/archambaultv/pybalancebook/issues"