[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyBalanceBook"
dynamic = ["version"]
authors = [
  { name="Vincent Archambault-B", email="vincentarchambault@icloud.com" },
]
description = "Plain text accounting library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Operating System :: OS Independent",
]

[tool.hatch.version]
path = "src/balancebook/__about__.py"

[tool.hatch.build]
sources = ["src"]

[project.urls]
"Homepage" = "https://github.com/archambaultv/pybalancebook"
"Bug Tracker" = "https://github.com/archambaultv/pybalancebook/issues"